clean up notebooks

--- a/notebooks/crossing_probability.ipynb
+++ b/notebooks/crossing_probability.ipynb
@@ -6,9 +6,24 @@
    "source": [
     "# Cross probability model\n",
     "\n",
-    "All exploratory work for determining probability of a successful cross\n",
+    "All exploratory work for determining probability of a successful cross\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reflection \n",
     "\n",
-    "See bottom of notebook for limitations and drawbacks of the model"
+    "Given there is limited data for training, the model performance is not the best\n",
+    "\n",
+    "Another issue is the abiguity of incomplete vs complete cross\n",
+    "- crosses can often be made into space \n",
+    "- even though a cross is \"incomplete\", it doesn't mean the team can't regain possesion and now be in a more dangerous location \n",
+    "\n",
+    "With these considerations in mind, a better definition of incomplete vs complete may mean we end up with a more balanced dataset or better data labels for each cross\n",
+    "\n",
+    "Also with a larger dataset the model may be able pick up more patterns, <1000 observations for each class is not ideal to train a accurate model"
    ]
   },
   {
@@ -652,11 +667,11 @@
    "source": [
     "From research, Statsbomb has concluded that the radius of pressure is roughly 2.3 yards ~= 3 yards.\n",
     "\n",
-    "However, since we are calculating a shot from a cross, there is potentail for players to move in that cross time. Therefore we will losen the radius to be 6 yards to account for time for opponents to move in on the reciever. \n",
-    "\n",
     "\"That means the pressure radius is on average only, 2.3 yards\"\n",
     "\n",
-    "https://statsbomb.com/articles/soccer/shots-under-pressure-part-2-headers/"
+    "https://statsbomb.com/articles/soccer/shots-under-pressure-part-2-headers/\n",
+    "\n",
+    "When determining pressure on a cross, we will look at players within 3 yards of the actor"
    ]
   },
   {
@@ -1211,6 +1226,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "if given more time, I could have explored ensemble models or more advanced machine learning models but I chose LR since I am most familar with it and tree based models were yielding not the best results when I tried trainig them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Serialize model"
    ]
   },
@@ -1223,23 +1245,6 @@
     "from pickle import dump\n",
     "\n",
     "dump(modelCV, open('models/cross_model.pkl', 'wb'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Reflection \n",
-    "\n",
-    "Given there is limited data for training, the model performance is not the best\n",
-    "\n",
-    "Another issue is the abiguity of incomplete vs complete cross\n",
-    "- crosses can often be made into space \n",
-    "- even though a cross is \"incomplete\", it doesn't mean the team can't regain possesion and now be in a more dangerous location \n",
-    "\n",
-    "With these considerations in mind, a better definition of incomplete vs complete may mean we end up with a more balanced dataset or better data labels for each cross\n",
-    "\n",
-    "Also with a larger dataset the model may be able pick up more patterns, <1000 observations for each class is not ideal to train a accurate model\n"
    ]
   }
  ],
