--- a/notebooks/crossing_probability.ipynb
+++ b/notebooks/crossing_probability.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "       3788743, 3788744])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 51/51 [02:42<00:00,  3.18s/it]\n"
+      "100%|██████████| 51/51 [03:15<00:00,  3.83s/it]\n"
      ]
     },
     {
@@ -99,7 +99,7 @@
        "1016"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,6 +135,37 @@
     "    cross_df = cross_df.append(df)\n",
     "\n",
     "len(cross_df.id.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4977     [107.9, 31.6]\n",
+       "4978     [107.9, 31.6]\n",
+       "4979     [107.9, 31.6]\n",
+       "4980     [107.9, 31.6]\n",
+       "4981     [107.9, 31.6]\n",
+       "             ...      \n",
+       "34875    [109.3, 38.9]\n",
+       "34876    [109.3, 38.9]\n",
+       "34877    [109.3, 38.9]\n",
+       "34878    [109.3, 38.9]\n",
+       "34879    [109.3, 38.9]\n",
+       "Name: pass_end_location, Length: 9263, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_df[cross_df['pass_outcome'] == 'Incomplete'].pass_end_location"
    ]
   },
   {
